Bug 1388309 - Let VideoDecoderChild::InitIPDL() return false if we don't want to decode video on GPU process. r=mattwoodrow, a=lizzard

MozReview-Commit-ID: DD7xVkXT6fk